syntax = "proto3";

option csharp_namespace = "subtuber_dataprovider";
option go_package = "./subtube";

package subtube;

// 用户数据RPC
service UserProfileRpc {
  //创建用户
  rpc CreateUser(CreateUserRequest) returns (UserProfileResponse);
  //获取用户数据
  rpc GetUserByHash(GetUserByHashRequest) returns (UserProfileResponse);
  //更新用户数据
  rpc UpdateUser(UpdateUserRequest) returns (UserProfileResponse);
  //删除用户数据
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  //检查用户是否存在
  rpc CheckUserExists(GetUserByHashRequest) returns (CheckUserExistsResponse);//
}

//主播业务数据RPC
service StreamerRpc {
  // 创建需要的业务数据
  rpc CreateTubeStreamer(CreateStreamerRequest) returns (StreamerResponse);

  // 查询主播的vod列表
  rpc ListStreamerVODs(ListStreamerVODsRequest) returns (StreamerListResponse);
}


//用户订阅主播业务数据rpc
service UserStreamerSubscriptionRpc {
  // 创建用户与主播的订阅关联
  rpc CreateSubscription(CreateSubscriptionRequest) returns (SubscriptionResponse);
  
  // 查询用户订阅的所有主播
  rpc GetUserSubscriptions(GetUserSubscriptionsRequest) returns (SubscriptionListResponse);
  
  // 查询关注某主播的所有用户
  rpc GetStreamerSubscribers(GetStreamerSubscribersRequest) returns (SubscriptionListResponse);
  
  // 检查用户是否订阅了某主播
  rpc CheckSubscriptionExists(CheckSubscriptionExistsRequest) returns (CheckSubscriptionExistsResponse);
  
  // 获取用户的订阅数量
  rpc GetUserSubscriptionCount(GetUserSubscriptionsRequest) returns (SubscriptionCountResponse);
  
  // 更新订阅关联
  rpc UpdateSubscription(UpdateSubscriptionRequest) returns (SubscriptionResponse);
  
  // 删除用户与主播的订阅关联
  rpc DeleteUserStreamerSubscription(DeleteUserStreamerSubscriptionRequest) returns (DeleteSubscriptionResponse);
  
  // 删除用户的所有订阅
  rpc DeleteAllUserSubscriptions(DeleteAllUserSubscriptionsRequest) returns (DeleteSubscriptionResponse);
  
  // Upsert 订阅（存在则更新，不存在则创建）
  rpc UpsertSubscription(UpsertSubscriptionRequest) returns (SubscriptionResponse);
}

message UserProfile {
  int32 id = 1;
  string user_hash = 2;
  string email = 3;
  int32 max_tracking_limit = 4;
}

message CreateUserRequest {
  string user_hash = 1;
  string email = 2;
  int32 max_tracking_limit = 3;
}

message GetUserByIdRequest {
  int32 id = 1;
}

message GetUserByHashRequest {
  string user_hash = 1;
}

message GetAllUsersRequest {}

message UpdateUserRequest {
  int32 id = 1;
  string user_hash = 2;
  string email = 3;
  int32 max_tracking_limit = 4;
}

message DeleteUserRequest {
  int32 id = 1;
}

message UserProfileResponse {
  bool success = 1;
  string message = 2;
  UserProfile user = 3;
}

message UserProfileListResponse {
  bool success = 1;
  repeated UserProfile users = 2;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message CheckUserExistsResponse {
  bool exists = 1;
}

message CreateStreamerRequest {
  string name             = 1;
  string title            = 2;
  string platform         = 3;
  string duration_seconds = 4;
  string video_id         = 5;
}

message Streamer {
  int32 id = 1;
  string name = 2;
  string title = 3;
  string platform = 4;
  string duration_seconds = 5;
  string created_at = 6; // RFC3339 timestamp
  string video_id = 7;
}

message StreamerResponse {
  bool success = 1;
  string message = 2;
  Streamer streamer = 3;
}

message ListStreamerVODsRequest { 
  string name  = 1;
  int32 limit = 2; //暂时用不上
}

message StreamerListResponse {
  bool success = 1;
  repeated Streamer streamers = 2;
}


// RPC === subscribe 相关 ===

// 订阅关联消息
message UserStreamerSubscription {
  int32 id = 1;
  string user_hash = 2;
  string streamer_id = 3;
  string created_at = 4; // RFC3339 timestamp
}

// 创建订阅请求
message CreateSubscriptionRequest {
  string user_hash = 1;
  string streamer_id = 2;
}

// 查询用户订阅请求
message GetUserSubscriptionsRequest {
  string user_hash = 1;
}

// 查询主播订阅者请求
message GetStreamerSubscribersRequest {
  string streamer_id = 1;
}

// 检查订阅是否存在请求
message CheckSubscriptionExistsRequest {
  string user_hash = 1;
  string streamer_id = 2;
}

// 更新订阅请求
message UpdateSubscriptionRequest {
  int32 id = 1;
  string user_hash = 2;
  string streamer_id = 3;
}

// 删除用户与主播的订阅请求
message DeleteUserStreamerSubscriptionRequest {
  string user_hash = 1;
  string streamer_id = 2;
}

// 删除用户所有订阅请求
message DeleteAllUserSubscriptionsRequest {
  string user_hash = 1;
}

// Upsert 订阅请求
message UpsertSubscriptionRequest {
  string user_hash = 1;
  string streamer_id = 2;
}

// 订阅响应
message SubscriptionResponse {
  bool success = 1;
  string message = 2;
  UserStreamerSubscription subscription = 3;
}

// 订阅列表响应
message SubscriptionListResponse {
  bool success = 1;
  repeated UserStreamerSubscription subscriptions = 2;
}

// 删除订阅响应
message DeleteSubscriptionResponse {
  bool success = 1;
  string message = 2;
  int32 deleted_count = 3; // 删除的数量（用于批量删除）
}

// 检查订阅存在响应
message CheckSubscriptionExistsResponse {
  bool exists = 1;
}

// 订阅数量响应
message SubscriptionCountResponse {
  int32 count = 1;
}